feat: add mutation detect
